--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <section class="grid">
       <article class="card">
-        <h2>Mapa de Europa (Leaflet)</h2>
+        <h2>Mapa de Europa (con sus capitales)</h2>
         <p>
           Mapa plano con fronteras de Europa y capitales. Usa un GeoJSON local
           y resalta cada pais al pasar o hacer clic para mostrar su capital.
