Add B1 French practice quiz and link on homepage
Added a new page 'b1_frances.html' with a 50-question French B1 practice quiz, including immediate feedback and explanations. Updated 'index.html' to include a card linking to the new practice quiz.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
         </p>
         <a href="mapa_europa.html">Abrir mapa</a>
       </article>
+      <article class="card">
+        <h2>Practica B1 de Frances</h2>
+        <p>
+          Simulador con 50 preguntas tipo examen. Cada respuesta muestra
+          correccion inmediata y una explicacion breve.
+        </p>
+        <a href="b1_frances.html">Empezar practica</a>
+      </article>
     </section>
   </div>
 </body>
