--- a/b1_frances.html
+++ b/b1_frances.html
@@ -57,12 +57,12 @@
     header {
       background: var(--surface);
       border-radius: 20px;
-      height: 300px;
+      height: 250px;
       padding: 12px 16px;
       box-shadow: var(--shadow);
       border: 1px solid rgba(0,0,0,0.04);
       display: grid;
-      gap: 6px;
+      gap: 28px;
       justify-items: center;
       text-align: center;
       align-content: center;
@@ -93,10 +93,10 @@
     }
     button {
       border: none;
-      padding: 2px 10px;
+      padding: 15px 30px;
       border-radius: 999px;
       font-weight: 600;
-      font-size: 12px;
+      font-size: 21px;
       line-height: 1;
       min-height: 24px;
       display: inline-flex;
@@ -118,6 +118,7 @@
     .card {
       background: var(--surface);
       border-radius: 20px;
+      margin-top: 8px;
       padding: 24px;
       box-shadow: var(--shadow);
       border: 1px solid rgba(0,0,0,0.04);
